# lolita

./: .clangd  .gitignore  CHANGELOG.md  LICENSE  README.md  TODOs.md  a.out  anaphoric-macro.scm  comp.scm  example.scm  factorial.scm  flake.nix  lolita.cabal  main.c  out2.c  scheme.h  scheme.h.gch  tmp.scm  while.scm
app/: Main.hs  MonadT.hs  Parse.hs  Transformers.hs
src/: Codegen.hs  Eval.hs  Main.hs  MonadT.hs  Objectify.hs  Parse.hs  Walk.hs  Walking.hs
test/: Main.hs  ParseTest.hs  WalkTest.hs
