cabal-version: 3.0
name:          lolita
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Victor Velev
maintainer:    vivelev@icloud.com
category:      Language

build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

test-suite test
    type:          exitcode-stdio-1.0
    main-is:       test.hs
    build-depends: base

executable lolita
    import:           warnings
    main-is:          Main.hs
    other-modules:    Parse, Eval, MonadT
    build-depends:    base,
                      containers,
    hs-source-dirs:   app
    default-language: GHC2021
