cabal-version: 3.0
name:          lolita
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Victor Velev
maintainer:    vivelev@icloud.com
category:      Language

build-type:         Simple

common warnings
    ghc-options: -Wall

test-suite main
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       ParseTest
  build-depends:       base,
                       lolita,
                       HUnit,
  default-language:    GHC2021

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Objectify, Parse, Walk
    other-modules:    MonadT
    build-depends:    base,
    default-language: GHC2021

executable lolita
    import:           warnings
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    Parse, Objectify, Walk, MonadT
    build-depends:    base,
    default-language: GHC2021
